--- a/app/globals.css
+++ b/app/globals.css
@@ -128,6 +128,34 @@
 	font-style: italic;
 }
 
+@font-face {
+	font-family: "SuisseWorks";
+	src: url("/fonts/SuisseWorks-Regular.otf") format("opentype");
+	font-weight: 400;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "SuisseWorks";
+	src: url("/fonts/SuisseWorks-RegularItalic.otf") format("opentype");
+	font-weight: 400;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: "SuisseWorks";
+	src: url("/fonts/SuisseWorks-Medium.otf") format("opentype");
+	font-weight: 500;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "SuisseWorks";
+	src: url("/fonts/SuisseWorks-Bold.otf") format("opentype");
+	font-weight: 700;
+	font-style: normal;
+}
+
 body {
 	font-family: "SuisseIntl", sans-serif;
 }
