--- a/app/globals.css
+++ b/app/globals.css
@@ -15,16 +15,10 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
-/* 
+
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-} */
+  font-family: var(--font-rubik), sans-serif;
+}
 
 @layer utilities {
   .text-balance {
